edited from browser again

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>My website</title>
   </head>
   <body>
-    Hello, world! (edited from Browser)
+    Hello, world! (edited from Browser a second time)
   </body>
 </html>
