--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My website</title>
+    <title>PhD progress 2020</title>
   </head>
   <body>
-    Hello, world! (edited from local)
+    <h1>Task:</h1>
+    <ul>
+      <li>Threshold paper</li>
+      <li>Virtual microscope</li>
+      <li>Airy disk simulation</li>
+    </ul>
   </body>
 </html>
