img and calendar

--- a/index.html
+++ b/index.html
@@ -1,14 +1,28 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8" />
     <title>PhD progress 2020</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <h1>Task:</h1>
-    <ul>
-      <li>Threshold paper</li>
-      <li>Virtual microscope</li>
-      <li>Airy disk simulation</li>
-    </ul>
+    <div>
+      <ul>
+        <li>Threshold paper</li>
+        <li>Virtual microscope</li>
+        <li>Airy disk simulation</li>
+        <li>Ensamble test</li>
+      </ul>
+    </div>
+
+    <div>
+      <ul>
+        <li>Read a hitchiker guide</li>
+        <li>Read specral analysis book</li>
+      </ul>
+    </div>
+
+    <img src="img/polar.jpg" width="50%" />
   </body>
 </html>
